--- a/pom.xml
+++ b/pom.xml
@@ -13,14 +13,20 @@
 	<version>1.0.0</version>
 	<name>online-shop</name>
 	<description>Demo project for Spring Boot</description>
+
+	<packaging>pom</packaging>
+
 	<properties>
 		<java.version>17</java.version>
 		<maven.compiler.source>17</maven.compiler.source>
 		<maven.compiler.target>17</maven.compiler.target>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
 	<modules>
-
+		<module>service-discovery</module>
+		<module>api-gateway</module>
+		<module>security-service</module>
 	</modules>
 
 
